<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="32dp">

            <ImageView
                android:id="@+id/iv_album_cover"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_centerHorizontal="true"
                android:src="@drawable/itunes_logo_circle" />

        </RelativeLayout>

        <TextView
            android:id="@+id/tv_song_title_detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="24sp"
            android:padding="8dp"
            android:text="@string/unknown_default" />

        <TextView
            android:id="@+id/tv_artist_name_detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="22sp"
            android:padding="4dp"
            android:textAlignment="center"
            android:textColor="@color/flamingo"
            android:text="@string/unknown_default" />

        <TextView
            android:id="@+id/tv_release_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:padding="8dp"
            android:textAlignment="center"
            android:text="@string/unknown_default" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2">

            <TextView
                android:id="@+id/tv_media_control"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:background="@drawable/button_shape"
                android:paddingTop="8dp"
                android:paddingBottom="4dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="8dp"
                android:text="@string/play"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:layout_weight="1"
                android:textColor="@color/flamingo"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tv_artist_info"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:background="@drawable/button_shape"
                android:paddingStart="0sp"
                android:paddingTop="8dp"
                android:paddingEnd="4dp"
                android:layout_weight="1"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="8dp"
                android:text="@string/artist_info"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="@color/flamingo"
                android:textSize="16sp" />
        </LinearLayout>

        
        <TextView
            android:id="@+id/tv_kind_detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:padding="16dp"
            android:layout_marginTop="32dp"
            android:text="@string/unknown_default" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:background="@color/dark_gray" />

        <TextView
            android:id="@+id/tv_collection_name_detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:padding="16dp"
            android:text="@string/unknown_default" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:background="@color/dark_gray" />

        <TextView
            android:id="@+id/tv_explicit_detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:padding="16dp"
            android:text="@string/unknown_default" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:background="@color/dark_gray" />

    </LinearLayout>

</ScrollView>
